# Initantiate.dev

./: .env.server.example  .gitignore  README.md  main.wasp  package-lock.json  package.json  schema.prisma
api/: .env.example  .gitignore  fly.toml  main.py  pyproject.toml  requirements.txt
migrations/20250523191745_initial_schema/: migration.sql
migrations/20250524041102_add_deployment_details_field/: migration.sql
src/: Layout.jsx  Main.css  actions.js  cloudCredentialService.js  credentialActions.js  externalIaCService.js  iacValidationService.js  queries.js
src/pages/: CloudCredentials.jsx  Dashboard.jsx  InfrastructureDetail.jsx  Landing.jsx
test/: test-deployment.js
test/infrastructure/: aws-s3-test.js  azure-resource-group-test.js  gcp-storage-test.js
