[tool.poetry]
name = "instantiate-backend"
version = "0.1.0"
description = "Backend API for Instanti8.dev infrastructure generation"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.2"
httpx = "^0.27.0"
python-multipart = "^0.0.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
